Dev/src/PS Enterprise/objects/UI_Helper__c.object
<CustomObject>
    <description>A helper object used by user interfaces (VF, et al) to access salesforce controls.
This object is not intended to store data, and should have full CRUD/FLS permissions to all users.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UI Helpers (Active Resource)</relationshipLabel>
        <relationshipName>UI_Helpers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UI Helpers (Contact)</relationshipLabel>
        <relationshipName>UI_Helpers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_0__c</fullName>
        <label>Number.0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_1__c</fullName>
        <label>Number.1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_2__c</fullName>
        <label>Number.2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UI Helpers</relationshipLabel>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UI_Storage_Index__c</fullName>
        <label>UI Storage Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_Storage__c</fullName>
        <label>UI Storage</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UI_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UI Helper</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UI Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>